--- a/config.ini
+++ b/config.ini
@@ -2,6 +2,6 @@
 journal_file = ./journals/default_journal.json
 
 [Training program]
-simple_program_name = Current two-day split
+simple_program_name = Test two-day split
 simple_program_last_training = -1
 
