Init exercises in tr with prev values

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Journal]
-journal_file = ./journals/default_journal.json
+journal_file = ./journals/test_journal.json
 
 [Training program]
-simple_program_name = Test two-day split
-simple_program_last_training = -1
+simple_program_name = Current two-day split
+simple_program_last_training = 0
 
